--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-native-community/toolbar-android": "0.1.0-rc.2",
     "@react-navigation/native": "^5.2.3",
     "@react-navigation/stack": "^5.2.18",
+    "buffer": "^6.0.3",
+    "express": "^4.17.3",
     "react": "16.11.0",
     "react-native": "^0.62.2",
+    "react-native-document-picker": "^8.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-picker": "^4.7.3",
     "react-native-incall-manager": "^3.2.7",
     "react-native-modal": "^11.6.1",
     "react-native-paper": "^3.9.0",
@@ -27,6 +32,7 @@
     "react-native-screens": "^2.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webrtc": "^1.87.2",
+    "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
