--- a/ios/Podfile
+++ b/ios/Podfile
@@ -81,6 +81,8 @@ target 'webrtcApp' do
 
   pod 'RNFS', :path => '../node_modules/react-native-fs'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'webrtcAppTests' do
     inherit! :complete
     # Pods for testing
