--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-sqlite-storage": "^4.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webrtc": "^1.87.2",
     "socket.io": "^4.4.1",
